feat: player image
