# src/controllers/player/CreatePlayerController.js
@@ -3,8 +3,10 @@ const CreatePlayerService = require('../../services/player/CreatePlayerService')
 module.exports = async (req, res) => {
   const { id } = req.user;
   const { nickname, gender, combat_class, description } = req.body;
+  const { player_image } = req.file;
   try {
     const player = await CreatePlayerService({
+      player_image,
       id,
       nickname,
       gender,
