# src/swagger.json
@@ -177,6 +177,7 @@
             "name": "Player",
             "description": "Informações do jogador a ser criado",
             "required": true,
+            "multipart/form-data": {
             "schema": {
               "type": "object",
               "properties": {
@@ -195,6 +196,7 @@
               }
             }
           }
+        }
         ],
         "responses": {
           "201": {
@@ -202,6 +204,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "player_image": {
+                  "type": "string"
+                },
                 "id": {
                   "type": "integer"
                 },
